Fri Aug 08 20:05:55 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Added confirmation dialogs and support for deleting buddies,
	    chats, and groups.

Fri Aug 08 19:22:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/main.cpp:
	  - qpe-gaim no longer has a window per conversation window, buddy list,
	    and accounts. They merged into one window with a widget stack, which
	    is must cleaner. Patch by Harlekin from OPIE, with some fixes thrown
	    in by me.

Fri Aug 08 17:23:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Buddies with no status emblems weren't getting protocol icons
	    either. Fixed.

Fri Aug 08 17:21:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The icon on the conversation tab now shows the user's status.

Fri Aug 08 17:09:23 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Added an offset for the emblem on buddy status icons.

Fri Aug 08 16:43:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/QGaimImageUtils.cpp:
	* src/QGaimImageUtils.h:
	* gaim.pro:
	  - Added QGaimImageUtils, put status icons in the buddy list, and
	    added login/logout door icons.

Fri Aug 08 03:59:04 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mktarball.sh:
	  - The generated tarball directory name and filename now include
	    the release number.

Thu Aug 07 02:00:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* gaim.pro:
	  - Split the buddy list code out of the buddy list window and into
	    its own widget.
