@@ -1,3 +1,9 @@
+Fri Aug 08 20:58:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	  - Hooked up the Add Group dialog.
+
 Fri Aug 08 20:05:55 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
